--- a/assets/sass/global/_colors.scss
+++ b/assets/sass/global/_colors.scss
@@ -1,9 +1,14 @@
 //Primary-Colors
 $theme-cyan: hsl(171, 66%, 44%);
-$theme-light-blue: hsl(233, 100%, 69%);
+$theme-blue: hsl(233, 100%, 69%);
+$theme-footer-gray: hsl(220, 18%, 97%);
 
 //Neutral-Colors
 $theme-dark-gray: hsl(210, 10%, 33%);
 $theme-gray-blue: hsl(201, 11%, 66%);
+$theme-dark-cyan: hsl(170, 68%, 37%);
+$theme-light-cyan: hsl(171, 52%, 58%);
+$theme-dark-blue: hsl(233, 69%, 60%);
+$theme-light-blue: hsl(233, 100%, 77%);
 $theme-white: hsl(0, 0%, 100%);
 $theme-light-white: hsla(0, 0%, 100%, 0.8);
