--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -8,7 +8,7 @@ header {
     margin-bottom: 7.5rem;
     background: {
         color: $theme-white;
-        size: contain;
+        size: 100%;
         position: top;
         repeat: no-repeat;
         image: url(../images/bg-header-mobile.png);
