--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -108,6 +108,29 @@ address {
   }
 }
 
+.skip-btn {
+  position: absolute;
+  top: -100px;
+  left: 10px;
+  font-size: 1.13rem;
+  font-weight: 600;
+  letter-spacing: 0.0313rem;
+  color: hsl(0, 0%, 100%);
+  padding: 0.8rem 1rem 1rem;
+  background-color: hsl(171, 66%, 44%);
+  border-bottom: solid 0.25rem hsl(171, 52%, 58%);
+  border-radius: 0 0 0.5rem 0.5rem;
+  transform: scaleY(-1);
+  transition: all 0.5s;
+}
+.skip-btn:focus {
+  top: 0;
+  transform: scaleY(1);
+}
+.skip-btn:active {
+  border-bottom-width: 0;
+}
+
 header {
   display: flex;
   flex-direction: column;
@@ -175,6 +198,7 @@ header {
 }
 
 body {
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
