--- a/assets/sass/components/_buttons.scss
+++ b/assets/sass/components/_buttons.scss
@@ -53,3 +53,28 @@
         }
     }
 }
+
+.skip-btn {
+    position: absolute;
+    top: -100px;
+    left: 10px;
+    font-size: 1.13rem;
+    font-weight: $bold;
+    letter-spacing: 0.0313rem;
+    color: $theme-white;
+    padding: 0.8rem 1rem 1rem;
+    background-color: $theme-cyan;
+    border-bottom: solid 0.25rem $theme-light-cyan;
+    border-radius: 0 0 0.5rem 0.5rem;
+    transform: scaleY(-1);
+    transition: all 0.5s;
+
+    &:focus {
+        top: 0;
+        transform: scaleY(1);
+    }
+
+    &:active {
+        border-bottom-width: 0;
+    }
+}
