--- a/assets/sass/abstract/_reset.scss
+++ b/assets/sass/abstract/_reset.scss
@@ -16,6 +16,7 @@
   }
   body {
     line-height: 1.5;
+    text-rendering: optimizeSpeed;
     -webkit-font-smoothing: antialiased;
   }
   img, picture, video, canvas, svg {
