--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -565,7 +565,7 @@ footer {
     position: absolute;
     content: "";
     width: 100%;
-    height: 0.1875rem;
+    height: 2px;
     top: 100%;
     bottom: 0;
     left: 0;
@@ -582,7 +582,7 @@ footer {
     transform: scaleX(1);
     transform-origin: left;
   }
-  .footer__socials-listitem {
+  .footer__socials-listitem:is(:hover, :focus, :active) {
     transform: scale(1.1);
   }
 }
