--- a/assets/sass/layout/_footer.scss
+++ b/assets/sass/layout/_footer.scss
@@ -70,7 +70,7 @@ footer {
                 position: absolute;
                 content: "";
                 width: 100%;
-                height: 0.1875rem;
+                height: 2px;
                 top: 100%;
                 bottom: 0;
                 left: 0;
@@ -91,7 +91,7 @@ footer {
             }
         }
 
-        &__socials-listitem {
+        &__socials-listitem:is(:hover, :focus, :active) {
             transform: scale(1.1);
         }
     }
